@@ -2,6 +2,14 @@ $Id: apiversions.txt,v 1.7 2015/07/23 20:40:08 nanard Exp $
 
 Differences in API between miniUPnPc versions
 
+API version 15
+  changed "sameport" argument of upnpDiscover() upnpDiscoverAll() upnpDiscoverDevice()
+    to "localport". When 0 or 1, behaviour is not changed, but it can take
+    any other value between 2 and 65535
+    Existing programs should be compatible
+  updated macro :
+    #define MINIUPNPC_API_VERSION  15
+
 API version 14
 miniupnpc.h
   add ttl argument to upnpDiscover() upnpDiscoverAll() upnpDiscoverDevice()
@@ -9,6 +17,8 @@ miniupnpc.h
   getDevicesFromMiniSSDPD() :
     connectToMiniSSDPD() / disconnectFromMiniSSDPD()
     requestDevicesFromMiniSSDPD() / receiveDevicesFromMiniSSDPD()
+  updated macro :
+    #define MINIUPNPC_API_VERSION  14
 
 API version 13
 miniupnpc.h:
